# capture

./: .gitmodules  README.md
capture/: CMakeLists.txt  package.xml
capture/config/: capture.yaml
capture/launch/simulation/: capture.launch.py
capture_claw/: package.xml  setup.cfg  setup.py
capture_claw/capture_claw/: control_claw.py  extend_claw.py
capture_gazebo/: CMakeLists.txt  package.xml  pegasus_capture.sdf.jinja
capture_gazebo/include/: gazebo_claw_plugin.hpp
capture_gazebo/launch/vehicles/: capture.launch.py
capture_gazebo/launch/worlds/: seixal.launch.py
capture_gazebo/models/pegasus_capture/: model.config  pegasus_capture.sdf.jinja
capture_gazebo/models/pegasus_capture/meshes/: capture_claw.stl  capture_finger.stl  capture_prop.dae
capture_gazebo/src/: gazebo_claw_plugin.cpp
capture_gazebo/worlds/: seixal_track.world
capture_msgs/: CMakeLists.txt  package.xml
capture_msgs/include/capture_msgs/: visibility_control.h
capture_msgs/msg/: Claw.msg
capture_msgs/srv/: Claw.srv  ExtendClaw.srv
